logs/wendelin.core.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/persistent'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BTrees'...
Listing './lib/python3.5/site-packages/BTrees/tests'...
Listing './lib/python3.5/site-packages/BTrees-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/ZConfig'...
Listing './lib/python3.5/site-packages/ZConfig/components'...
Listing './lib/python3.5/site-packages/ZConfig/components/basic'...
Listing './lib/python3.5/site-packages/ZConfig/components/basic/tests'...
Listing './lib/python3.5/site-packages/ZConfig/components/logger'...
Listing './lib/python3.5/site-packages/ZConfig/components/logger/tests'...
Listing './lib/python3.5/site-packages/ZConfig/tests'...
Listing './lib/python3.5/site-packages/ZConfig/tests/input'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library/thing'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library/thing/extras'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library/widget'...
Listing './lib/python3.5/site-packages/ZConfig/tests/zipsource'...
Listing './lib/python3.5/site-packages/ZConfig/tests/zipsource/foo'...
Listing './lib/python3.5/site-packages/ZConfig/tests/zipsource/foo/sample'...
Listing './lib/python3.5/site-packages/ZConfig-3.2.0.dist-info'...
Listing './lib/python3.5/site-packages/ZEO'...
Listing './lib/python3.5/site-packages/ZEO/asyncio'...
Listing './lib/python3.5/site-packages/ZEO/scripts'...
Listing './lib/python3.5/site-packages/ZEO/tests'...
Listing './lib/python3.5/site-packages/ZEO/tests/ZEO4'...
Listing './lib/python3.5/site-packages/ZEO/tests/ZEO4/auth'...
Listing './lib/python3.5/site-packages/ZEO/tests/ZEO4/zrpc'...
Listing './lib/python3.5/site-packages/ZEO-5.1.1.egg-info'...
Listing './lib/python3.5/site-packages/ZODB'...
Listing './lib/python3.5/site-packages/ZODB/FileStorage'...
Listing './lib/python3.5/site-packages/ZODB/scripts'...
Listing './lib/python3.5/site-packages/ZODB/scripts/manual_tests'...
Listing './lib/python3.5/site-packages/ZODB/scripts/tests'...
Listing './lib/python3.5/site-packages/ZODB/tests'...
Listing './lib/python3.5/site-packages/ZODB-5.3.0.egg-info'...
Listing './lib/python3.5/site-packages/ZODB3-3.11.0.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/persistent'...
Listing './lib/python3.5/site-packages/persistent/tests'...
Listing './lib/python3.5/site-packages/persistent-4.2.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/transaction'...
Listing './lib/python3.5/site-packages/transaction/tests'...
Listing './lib/python3.5/site-packages/transaction-2.1.2.dist-info'...
Listing './lib/python3.5/site-packages/wendelin'...
Listing './lib/python3.5/site-packages/wendelin/bigarray'...
Listing './lib/python3.5/site-packages/wendelin/bigarray/tests'...
Listing './lib/python3.5/site-packages/wendelin/bigfile'...
Listing './lib/python3.5/site-packages/wendelin/bigfile/tests'...
Listing './lib/python3.5/site-packages/wendelin/demo'...
Listing './lib/python3.5/site-packages/wendelin/lib'...
Listing './lib/python3.5/site-packages/wendelin/lib/tests'...
Listing './lib/python3.5/site-packages/wendelin.core-0.11.egg-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/lockfile'...
Listing './lib/python3.5/site-packages/zc.lockfile-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/zdaemon'...
Listing './lib/python3.5/site-packages/zdaemon/tests'...
Listing './lib/python3.5/site-packages/zdaemon-4.2.0.egg-info'...
Listing './lib/python3.5/site-packages/zodbpickle'...
Compiling './lib/python3.5/site-packages/zodbpickle/pickle_2.py'...
***   File "./lib/python3.5/site-packages/zodbpickle/pickle_2.py", line 882
    except _Stop, stopinst:
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zodbpickle/pickletools_2.py'...
***   File "./lib/python3.5/site-packages/zodbpickle/pickletools_2.py", line 1803
    print "skipping %r: it doesn't look like an opcode name" % name
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zodbpickle/tests'...
Compiling './lib/python3.5/site-packages/zodbpickle/tests/pickletester_2.py'...
***   File "./lib/python3.5/site-packages/zodbpickle/tests/pickletester_2.py", line 433
    x = [0, 1L, 2.0, 3.0+0j]
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zodbpickle-0.7.0.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
